fix further notebook bugs

--- a/workshops.ipynb
+++ b/workshops.ipynb
@@ -467,7 +467,7 @@
     "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
     "            x, y = batch\n",
     "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x)\n",
+    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
     "            features.append(batch_feats)\n",
     "            labels.append(y)\n",
     "        features = torch.vstack(features)\n",
@@ -477,41 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class MyResnet(LitResnet):\n",
     "    device = (\n",
     "        torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "    )\n",
-    "\n",
-    "    def _forward_features(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        raise NotImplementedError\n",
-    "\n",
-    "    def extract_features(self, dataloader):\n",
-    "        features = []\n",
-    "        labels = []\n",
-    "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
-    "            x, y = batch\n",
-    "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x)\n",
-    "            features.append(batch_feats)\n",
-    "            labels.append(y)\n",
-    "        features = torch.vstack(features)\n",
-    "        labels = torch.hstack(labels)\n",
-    "        return features, labels"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyResnet(LitResnet):\n",
     "    def _forward_features(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        x = self.model.conv1(x)\n",
     "        x = self.model.bn1(x)\n",
@@ -533,7 +506,7 @@
     "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
     "            x, y = batch\n",
     "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x.to(self.device))\n",
+    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
     "            features.append(batch_feats)\n",
     "            labels.append(y)\n",
     "        features = torch.vstack(features)\n",
@@ -848,6 +821,10 @@
    "outputs": [],
    "source": [
     "class MyAE(AE):\n",
+    "    device = (\n",
+    "        torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "    )\n",
+    "\n",
     "    def _forward_features(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        raise NotImplementedError\n",
     "\n",
@@ -859,7 +836,7 @@
     "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
     "            x, y = batch\n",
     "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x)\n",
+    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
     "            features.append(batch_feats)\n",
     "            labels.append(y)\n",
     "        features = torch.vstack(features)\n",
@@ -874,6 +851,10 @@
    "outputs": [],
    "source": [
     "class MyAE(AE):\n",
+    "    device = (\n",
+    "        torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "    )\n",
+    "\n",
     "    def _forward_features(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        return self.encoder(x)\n",
     "\n",
@@ -885,7 +866,7 @@
     "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
     "            x, y = batch\n",
     "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x)\n",
+    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
     "            features.append(batch_feats)\n",
     "            labels.append(y)\n",
     "        features = torch.vstack(features)\n",
@@ -1053,7 +1034,7 @@
     "    def __init__(\n",
     "        self,\n",
     "        model: Union[nn.Module, LightningModule],\n",
-    "        lr: float = 0.05,\n",
+    "        lr: float = 1e-3,\n",
     "        batch_size: int = 256,\n",
     "    ):\n",
     "        # init the pretrained LightningModule\n",
@@ -1078,7 +1059,7 @@
     "\n",
     "\n",
     "class AEClassifier(BaseClassifier):\n",
-    "    def __init__(self, model: AE, lr: float = 0.05, batch_size: int = 256):\n",
+    "    def __init__(self, model: AE, lr: float = 1e-3, batch_size: int = 256):\n",
     "        super().__init__()\n",
     "        self.save_hyperparameters(ignore=[\"model\"])\n",
     "\n",
@@ -1171,15 +1152,16 @@
     }
    ],
    "source": [
-    "ae_clf = AEClassifier(model=ae)\n",
+    "ae_clf = AEClassifier(model=model_ae, lr=1e-2)\n",
     "\n",
     "trainer = Trainer(\n",
-    "    max_epochs=20,\n",
+    "    max_epochs=5,\n",
     "    accelerator=\"auto\",\n",
     "    devices=1,\n",
     ")\n",
     "\n",
-    "trainer.fit(ae_clf, dm_ae)"
+    "trainer.fit(ae_clf, dm_ae)\n",
+    "trainer.test(ae_clf, dm_ae)"
    ]
   },
   {
@@ -1280,7 +1262,7 @@
     "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
     "            x, y = batch\n",
     "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x)\n",
+    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
     "            features.append(batch_feats)\n",
     "            labels.append(y)\n",
     "        features = torch.vstack(features)\n",
@@ -1310,7 +1292,7 @@
     "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
     "            x, y = batch\n",
     "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x)\n",
+    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
     "            features.append(batch_feats)\n",
     "            labels.append(y)\n",
     "        features = torch.vstack(features)\n",
@@ -1520,16 +1502,16 @@
     }
    ],
    "source": [
-    "vae_clf = VAEClassifier(model=vae)\n",
+    "vae_clf = VAEClassifier(model=vae, lr=1e-2)\n",
     "\n",
     "trainer = Trainer(\n",
-    "    max_epochs=20,\n",
+    "    max_epochs=5,\n",
     "    accelerator=\"auto\",\n",
     "    devices=1,\n",
     ")\n",
     "\n",
     "trainer.fit(vae_clf, dm_ae)\n",
-    "trainer.test(vae_clf, dm_ae)"
+    "trainer.test(vae_clf, dm_ae)\n"
    ]
   },
   {
@@ -1636,6 +1618,10 @@
    "outputs": [],
    "source": [
     "class MySimCLR(SimCLR):\n",
+    "    device = (\n",
+    "        torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "    )\n",
+    "\n",
     "    def _forward_features(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        return self(x)\n",
     "\n",
@@ -1647,7 +1633,7 @@
     "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
     "            (x1, x2, x3), y = batch\n",
     "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x3.to(device))\n",
+    "                batch_feats = self._forward_features(x3.to(self.device)).cpu()\n",
     "            features.append(batch_feats)\n",
     "            labels.append(y)\n",
     "        features = torch.vstack(features)\n",
@@ -1924,11 +1910,10 @@
    "source": [
     "from src.model.base_classifier import SimCLRClassifier\n",
     "\n",
-    "\n",
-    "simclr_clf = SimCLRClassifier(model=model_simclr)\n",
+    "simclr_clf = SimCLRClassifier(model=model_simclr, lr=1e-3)\n",
     "\n",
     "trainer = Trainer(\n",
-    "    max_epochs=15,\n",
+    "    max_epochs=3,\n",
     "    accelerator=\"auto\",\n",
     "    devices=1,\n",
     ")\n",
