last fixes in the notebook

--- a/workshops.ipynb
+++ b/workshops.ipynb
@@ -367,7 +367,7 @@
     "from src.utils.utils import get_preds_and_labels\n",
     "\n",
     "preds, target = get_preds_and_labels(\n",
-    "    model=model_resnet, dataloader=dm_resnet.test_dataloader()\n",
+    "    model=model_resnet.to(device), dataloader=dm_resnet.test_dataloader(), device=device\n",
     ")"
    ]
   },
@@ -391,9 +391,9 @@
     "from src.utils.rel import reliability_diagram\n",
     "\n",
     "fig = reliability_diagram(\n",
-    "    y_true=target.numpy(),\n",
-    "    y_pred=torch.argmax(preds, dim=1).numpy(),\n",
-    "    y_conf=torch.max(preds, dim=1).values.numpy(),\n",
+    "    true_labels=target.numpy(),\n",
+    "    pred_labels=torch.argmax(preds, dim=1).numpy(),\n",
+    "    confidences=torch.max(preds, dim=1).values.numpy(),\n",
     "    num_bins=15,\n",
     "    dpi=90,\n",
     "    return_fig=True,\n",
@@ -462,45 +462,6 @@
     "        raise NotImplementedError\n",
     "\n",
     "    def extract_features(self, dataloader):\n",
-    "        features = []\n",
-    "        labels = []\n",
-    "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
-    "            x, y = batch\n",
-    "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
-    "            features.append(batch_feats)\n",
-    "            labels.append(y)\n",
-    "        features = torch.vstack(features)\n",
-    "        labels = torch.hstack(labels)\n",
-    "        return features, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyResnet(LitResnet):\n",
-    "    device = (\n",
-    "        torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
-    "    )\n",
-    "    def _forward_features(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        x = self.model.conv1(x)\n",
-    "        x = self.model.bn1(x)\n",
-    "        x = self.model.relu(x)\n",
-    "        x = self.model.maxpool(x)\n",
-    "        x = self.model.layer1(x)\n",
-    "        x = self.model.layer2(x)\n",
-    "        x = self.model.layer3(x)\n",
-    "        x = self.model.layer4(x)\n",
-    "        x = self.model.avgpool(x)\n",
-    "        x = torch.flatten(x, 1)\n",
-    "        return x\n",
-    "\n",
-    "    def extract_features(\n",
-    "        self, dataloader: DataLoader\n",
-    "    ) -> tuple[torch.Tensor, torch.Tensor]:\n",
     "        features = []\n",
     "        labels = []\n",
     "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
@@ -846,36 +807,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyAE(AE):\n",
-    "    device = (\n",
-    "        torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
-    "    )\n",
-    "\n",
-    "    def _forward_features(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        return self.encoder(x)\n",
-    "\n",
-    "    def extract_features(\n",
-    "        self, dataloader: DataLoader\n",
-    "    ) -> tuple[torch.Tensor, torch.Tensor]:\n",
-    "        features = []\n",
-    "        labels = []\n",
-    "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
-    "            x, y = batch\n",
-    "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
-    "            features.append(batch_feats)\n",
-    "            labels.append(y)\n",
-    "        features = torch.vstack(features)\n",
-    "        labels = torch.hstack(labels)\n",
-    "        return features, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 110,
    "metadata": {},
    "outputs": [
@@ -1030,15 +961,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AEClassifier(LitResnet):\n",
+    "from src.model.base_classifier import BaseClassifier\n",
+    "\n",
+    "class AEClassifier(BaseClassifier):\n",
     "    def __init__(\n",
     "        self,\n",
-    "        model: Union[nn.Module, LightningModule],\n",
+    "        model: AE,\n",
     "        lr: float = 1e-3,\n",
     "        batch_size: int = 256,\n",
     "    ):\n",
-    "        # init the pretrained LightningModule\n",
-    "        super().__init__(lr=lr, batch_size=batch_size)\n",
+    "        super().__init__()\n",
+    "        self.save_hyperparameters(ignore=[\"model\"])\n",
     "\n",
     "        self.model = model\n",
     "\n",
@@ -1047,32 +980,6 @@
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        raise NotImplementedError"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.model.base_classifier import BaseClassifier\n",
-    "\n",
-    "\n",
-    "class AEClassifier(BaseClassifier):\n",
-    "    def __init__(self, model: AE, lr: float = 1e-3, batch_size: int = 256):\n",
-    "        super().__init__()\n",
-    "        self.save_hyperparameters(ignore=[\"model\"])\n",
-    "\n",
-    "        self.model = model\n",
-    "\n",
-    "        # the autoencoder outputs a 512-dim representation and CIFAR-10 has 10 classes\n",
-    "        self.classifier = nn.Linear(512, 10)\n",
-    "\n",
-    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        with torch.no_grad():\n",
-    "            representations = self.model.encoder(x)\n",
-    "        out = self.classifier(representations)\n",
-    "        return F.log_softmax(out, dim=1)"
    ]
   },
   {
@@ -1276,36 +1183,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyVAE(VAE):\n",
-    "    def _forward_features(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        with torch.no_grad():\n",
-    "            x = self.encoder(x)\n",
-    "            mu = self.fc_mu(x)\n",
-    "            log_var = self.fc_var(x)\n",
-    "        sigma = torch.exp(log_var / 2)\n",
-    "        z = torch.distributions.Normal(mu, sigma).rsample()\n",
-    "        return z\n",
-    "\n",
-    "    def extract_features(self, dataloader):\n",
-    "        features = []\n",
-    "        labels = []\n",
-    "        for batch in tqdm.tqdm(dataloader, total=len(dataloader)):\n",
-    "            x, y = batch\n",
-    "            with torch.no_grad():\n",
-    "                batch_feats = self._forward_features(x.to(self.device)).cpu()\n",
-    "            features.append(batch_feats)\n",
-    "            labels.append(y)\n",
-    "        features = torch.vstack(features)\n",
-    "        labels = torch.hstack(labels)\n",
-    "        return features, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "model_vae = MyVAE(input_height=32)\n",
     "print(VAE.pretrained_weights_available())\n",
     "model_vae = model_vae.from_pretrained(\"cifar10-resnet18\")\n",
@@ -1397,30 +1274,6 @@
     "class VAEClassifier(BaseClassifier):\n",
     "    def __init__(self, model: VAE, lr: float = 0.05, batch_size: int = 256):\n",
     "        super().__init__()\n",
-    "\n",
-    "        self.save_hyperparameters(ignore=[\"model\"])\n",
-    "\n",
-    "        self.model = model\n",
-    "\n",
-    "        # the variational autoencoder outputs a 256-dim representation and CIFAR-10 has 10 classes\n",
-    "        self.classifier = ...\n",
-    "\n",
-    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.model.base_classifier import BaseClassifier\n",
-    "\n",
-    "\n",
-    "class VAEClassifier(BaseClassifier):\n",
-    "    def __init__(self, model: VAE, lr: float = 0.05, batch_size: int = 256):\n",
-    "        super().__init__()\n",
     "        self.save_hyperparameters(ignore=[\"model\"])\n",
     "\n",
     "        self.model = model\n",
@@ -1429,14 +1282,7 @@
     "        self.classifier = nn.Linear(256, 10)\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        with torch.no_grad():\n",
-    "            x = self.model.encoder(x)\n",
-    "            mu = self.model.fc_mu(x)\n",
-    "            log_var = self.model.fc_var(x)\n",
-    "        sigma = torch.exp(log_var / 2)\n",
-    "        z = torch.distributions.Normal(mu, sigma).rsample()\n",
-    "        out = self.classifier(z)\n",
-    "        return F.log_softmax(out, dim=1)"
+    "        raise NotImplementedError"
    ]
   },
   {
@@ -1502,7 +1348,7 @@
     }
    ],
    "source": [
-    "vae_clf = VAEClassifier(model=vae, lr=1e-2)\n",
+    "vae_clf = VAEClassifier(model=model_vae, lr=1e-2)\n",
     "\n",
     "trainer = Trainer(\n",
     "    max_epochs=5,\n",
@@ -2155,7 +2001,7 @@
     "\n",
     "        The logits should be scaled by the temperature.\n",
     "        \"\"\"\n",
-    "        return logits.div(self.t).softmax(dim=1).max(dim=1).values"
+    "        raise NotImplementedError\n"
    ]
   },
   {
@@ -2270,14 +2116,6 @@
     "        # HINT: tied covariance is a sum of covariances per class\n",
     "\n",
     "        # END IMPLEMENT\n",
-    "\n",
-    "        # START SOLUTION\n",
-    "        for clazz in range(n_classes):\n",
-    "            idxs = y.eq(clazz)\n",
-    "            assert idxs.sum() != 0\n",
-    "            zs = z[idxs].to(device)\n",
-    "            self.mu[clazz] = zs.mean(dim=0)\n",
-    "            self.cov += (zs - self.mu[clazz]).T.mm(zs - self.mu[clazz])\n",
     "\n",
     "        self.cov += torch.eye(self.cov.shape[0], device=self.cov.device) * 1e-6\n",
     "        self.precision = torch.linalg.inv(self.cov)\n",
@@ -2398,18 +2236,25 @@
     "\n",
     "results = []\n",
     "\n",
-    "model_wide_resnet = WideResNet(num_classes=10, pretrained=\"cifar10-pt\")\n",
+    "\n",
+    "# model_wide_resnet = WideResNet(num_classes=10, pretrained=\"cifar10-pt\")\n",
     "models = [\n",
+    "    vae_clf.eval().to(device),\n",
+    "    ae_clf.eval().to(device),\n",
     "    model_resnet.eval().to(device),\n",
-    "    model_ae.eval().to(device),\n",
-    "    model_vae.eval().to(device),\n",
-    "    model_simclr.eval().to(device),\n",
-    "    model_wide_resnet.eval().to(device),\n",
+    "    simclr_clf.eval().to(device),\n",
+    "    # model_wide_resnet.eval().to(device),\n",
     "]\n",
     "\n",
     "for model in models:\n",
+    "    model_name = type(model).__name__\n",
+    "    print(f\"->Model: {model_name}\")\n",
+    "    if model_name == \"MyResnet\":\n",
+    "      mahalanobis = Mahalanobis(model._forward_features, norm_std=std, eps=0.002)\n",
+    "    else:\n",
+    "      mahalanobis = Mahalanobis(model.model._forward_features, norm_std=std, eps=0.002)\n",
     "    detectors = {\n",
-    "        \"Mahalanobis\": Mahalanobis(model.features, norm_std=std, eps=0.002),\n",
+    "        \"Mahalanobis\": mahalanobis,\n",
     "        \"MaxSoftmax\": MaxSoftmax(model),\n",
     "    }\n",
     "    loader_in_train = DataLoader(\n",
@@ -2420,9 +2265,9 @@
     "        detector.fit(loader_in_train, device=device)\n",
     "    with torch.no_grad():\n",
     "        for detector_name, detector in detectors.items():\n",
-    "            print(f\"> Evaluating {detector_name}\")\n",
+    "            print(f\"---> Evaluating {detector_name}\")\n",
     "            for dataset_name, loader in datasets.items():\n",
-    "                print(f\"--> {dataset_name}\")\n",
+    "                print(f\"----> {dataset_name}\")\n",
     "                metrics = OODMetrics()\n",
     "                for x, y in loader:\n",
     "                    metrics.update(detector(x.to(device)), y.to(device))\n",
