last fixes in the notebook

--- a/workshops.ipynb
+++ b/workshops.ipynb
@@ -2272,7 +2272,7 @@
     "                for x, y in loader:\n",
     "                    metrics.update(detector(x.to(device)), y.to(device))\n",
     "                r = {\n",
-    "                    \"model\": type(model_resnet).__name__,\n",
+    "                    \"model\": model_name,\n",
     "                    \"detector\": detector_name,\n",
     "                    \"dataset\": dataset_name,\n",
     "                }\n",
@@ -2289,8 +2289,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.DataFrame(results)\n",
-    "mean_scores = df.groupby(\"detector\").mean() * 100\n",
-    "print(mean_scores.sort_values(\"AUROC\").to_csv(float_format=\"%.2f\"))"
+    "df"
    ]
   },
   {
